<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2011 Arnaud Bos <arnaud.tlse@gmail.com>

     This file is part of Luscinia.

     Luscinia is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.

     Luscinia is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.

     You should have received a copy of the GNU General Public License
     along with Luscinia.  If not, see <http://www.gnu.org/licenses/>.
-->

<resources>
    <string name="hello">Hello World, Luscinia!</string>
    <string name="app_name">Luscinia</string>
    <string name="week">week</string>
    <string name="dashboard_title">Dashboard: </string>
    <string name="patient_title">Patient: </string>
    <string name="ok">OK</string>
    <string name="login">Login</string>
    <string name="username">Username : </string>
    <string name="password">Password : </string>
    <string name="username_hint">i.e. tremy</string>
    <string name="password_hint">i.e. sushi</string>
    <string name="dialog_username_error_title">Username error</string>
    <string name="dialog_username_error_message">Username is invalid. Can\'t be empty.</string>
    <string name="dialog_password_error_title">Password error</string>
    <string name="dialog_password_error_message">Password is invalid. Can\'t be empty.</string>
    <string name="dialog_login_error_title">Login error</string>
    <string name="dialog_login_error_message">Login or password invalid.</string>
    <string name="connect_loading">Connecting...</string>
    
    <string name="actionbar_activity_not_found">Failed to open intent...</string>
    
    <string name="working_since">In service since: </string>
    <string name="time">Time: </string>
    <string name="patients_title">Patients: </string>
    <string name="notifications">Notifications</string>
	<string name="patients_loading">Loading patients list...</string>
	<string name="load_error_title">Loading error</string>
	<string name="load_error_message">An error occurred while loading the content.</string>

    <string name="folders">Folders</string>
    <string name="add_folder">Add folder</string>
    <string name="add_document">Add document</string>
	<string name="patient_loading">Loading patient...</string>
    <string name="refresh">Refresh</string>

    <string name="date">Date</string>
    <string name="focus">Focus</string>
    <string name="data">Data</string>
    <string name="actions">Actions</string>
    <string name="results">Results</string>
    <string name="save">Save</string>
	<string name="dialog_empty_field_error_title">Field validation error</string>
	<string name="dialog_empty_field_error_message">One field at least must be filled.</string>
	<string name="dialog_update_record_time_elapsed_error_title">Record update error</string>
	<string name="dialog_update_record_time_elapsed_error_message">The limit time to edit a record has elapsed.</string>
    <string name="update">Update</string>
    <string-array name="trans_longclick">
        <item>@string/update</item>
    </string-array>
    <string name="cancel">Cancel</string>

    <string name="initial_evaluation">Initial Evaluation (Inclusion)</string>
    <string name="remote_evaluation">Remote Evaluation</string>
    <string name="liaison">Liaison</string>
    <string name="mtved_m">D</string>
    <string name="mtved_m_hint">Current disease</string>
    <string name="mtved_t">T</string>
    <string name="mtved_t_hint">Treatment and current cares</string>
    <string name="mtved_v">F</string>
    <string name="mtved_v_hint">Feeling</string>
    <string name="mtved_e">E</string>
    <string name="mtved_e_hint">Environment, human, material</string>
    <string name="mtved_d">D</string>
    <string name="mtved_d_hint">Dependency (cares project)</string>

    <string name="add_patient">Add patient</string>
    <string name="edit_patient">Edit patient</string>
    <string name="new_patient">New patient</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="dob">Date of birth</string>
    <string name="insee">INSEE Number</string>
    <string name="telephone">Telephone</string>
    <string name="weight">Weight</string>
    <string name="size">Size</string>
    <string name="new_value">New value</string>
    <string name="quit">Quit</string>
    <string name="return_message">Save before quitting?</string>
    <string name="discard">Discard</string>
    <string name="save_loading">Saving...</string>
    <string name="save_error_title">Error on save</string>
    <string name="save_error_message">An error has occurred while saving.</string>
    <string name="patient_saved">Patient saved successfully.</string>

    <string name="administrative_folder">Administrative folder</string>
    <string name="nursing_cares_folder">Nursing cares folder</string>
    <string name="medical_folder">Medical folder</string>
    <string-array name="patient_add_folder_dialog">
        <item>@string/administrative_folder</item>
        <item>@string/nursing_cares_folder</item>
        <item>@string/medical_folder</item>
    </string-array>

    <string name="create_error_title">Error on create</string>
    <string name="create_folder_error_message">An error has occurred while creating the new folder.</string>
    <string name="create_loading">Creating...</string>
	<string name="folder_loading">Loading folder...</string>
	<string name="delete">Delete</string>
	<string name="delete_folder_message">Are you sure you want to delete this folder?</string>
	<string name="deleting">Deleting...</string>
	<string name="delete_error_title">Error on delete</string>
	<string name="delete_folder_error_message">An error has occurred while deleting or the limit time to delete this folder has elapsed.</string>
	<string name="delete_patient_message">Are you sure you want to delete this patient?</string>
	<string name="delete_patient_error_message">An error has occurred while deleting or the limit time to delete this patient has elapsed.</string>
    <string name="create_record_error_message">An error has occurred while creating the new record.</string>
	<string name="records_loading">Records loading...</string>

    <string name="trans_document">Transmissions</string>
    <string name="macrocible_document">Macro target</string>
    <string-array name="folder_add_document_dialog">
        <item>@string/trans_document</item>
        <item>@string/macrocible_document</item>
    </string-array>
    <string name="create_document_error_message">An error has occurred while creating the new document.</string>
	<string name="delete_document_message">Are you sure you want to delete this document?</string>
	<string name="dialog_delete_document_time_elapsed_error_title">Document delete error</string>
	<string name="dialog_delete_document_time_elapsed_error_message">The limit time to delete the document has elapsed.</string>
	<string name="dialog_update_document_time_elapsed_error_title">Document update error</string>
	<string name="dialog_update_document_time_elapsed_error_message">The limit time to update the document has elapsed.</string>
	<string name="delete_document_error_message">An error has occurred while deleting this document.</string>
</resources>
