<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    >
    <LinearLayout
    	android:orientation="vertical"
    	android:id="@+id/linearLayout1"
    	android:layout_height="wrap_content"
    	android:layout_width="wrap_content"
    	>
        <LinearLayout
        	android:orientation="horizontal"
        	android:id="@+id/LinearLayout01"
        	android:layout_height="wrap_content"
        	android:layout_width="wrap_content"
        	android:layout_gravity="right"
        	>
            <TextView
            	android:layout_width="wrap_content"
            	android:id="@+id/TextView01"
            	android:layout_height="wrap_content"
            	android:text="@string/username">
            </TextView>
            <EditText
            	android:id="@+id/edit_login"
            	android:layout_height="wrap_content"
            	android:layout_width="300dip"
            	android:hint="@string/username_hint">
            </EditText>
        </LinearLayout>
        <LinearLayout
        	android:orientation="horizontal"
        	android:id="@+id/linearLayout2"
        	android:layout_height="wrap_content"
        	android:layout_width="wrap_content"
        	android:layout_gravity="right"
        	>
            <TextView
            	android:layout_width="wrap_content"
            	android:id="@+id/textView1"
            	android:layout_height="wrap_content"
            	android:text="@string/password">
            </TextView>
            <EditText
            	android:id="@+id/edit_password"
            	android:layout_height="wrap_content"
            	android:layout_width="300dip"
            	android:hint="@string/password_hint">
            </EditText>
        </LinearLayout>
    </LinearLayout>
    <Button android:id="@+id/button_validate" android:layout_marginLeft="20dip" android:layout_width="72dip" android:layout_height="72dip" android:text="@string/login"></Button>
</LinearLayout>
