<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2011 Arnaud Bos <arnaud.tlse@gmail.com>

     This file is part of Luscinia.

     Luscinia is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.

     Luscinia is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.

     You should have received a copy of the GNU General Public License
     along with Luscinia.  If not, see <http://www.gnu.org/licenses/>.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:id="@+id/scrollView1"
	>
	<TableLayout
		android:id="@+id/table_view"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:stretchColumns="0,1,2,3"
		>
		<TableRow
			android:id="@+id/titles_row"
			>
			<TextView
				android:text="@string/focus"
				android:gravity="center"
				android:padding="3dip"
				android:textStyle="bold"
				style="@style/brown_textview" />
			<TextView
				android:text="@string/data"
				android:gravity="center"
				android:padding="3dip"
				android:textStyle="bold"
				style="@style/brown_textview" />
			<TextView
				android:text="@string/actions"
				android:gravity="center"
				android:padding="3dip"
				android:textStyle="bold"
				style="@style/brown_textview" />
			<TextView
				android:text="@string/results"
				android:gravity="center"
				android:padding="3dip"
				android:textStyle="bold"
				style="@style/brown_textview" />
		</TableRow>
		<TableRow>
			<EditText
				android:id="@+id/focus_edit"
				android:hint="..."
				android:layout_width="0dp"
				android:padding="3dip"
        		android:background="@drawable/edittext_blue"
    			style="@style/login_edittext" />
			<EditText
				android:id="@+id/data_edit"
				android:hint="..."
				android:layout_width="0dp"
				android:padding="3dip"
        		android:background="@drawable/edittext_blue"
    			style="@style/login_edittext" />
			<EditText
				android:id="@+id/actions_edit"
				android:hint="..."
				android:layout_width="0dp"
				android:padding="3dip"
        		android:background="@drawable/edittext_blue"
    			style="@style/login_edittext" />
			<EditText
				android:id="@+id/results_edit"
				android:hint="..."
				android:layout_width="0dp"
				android:padding="3dip"
        		android:background="@drawable/edittext_blue"
    			style="@style/login_edittext" />
		</TableRow>
	</TableLayout>
</ScrollView>
