<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    >

    <com.markupartist.android.widget.ActionBar
        android:id="@+id/actionbar"
        style="@style/ActionBar"
        android:layout_height="wrap_content"/>

    <ScrollView
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	>
        <LinearLayout
        	android:layout_width="fill_parent"
        	android:id="@+id/linearLayout"
        	android:orientation="vertical"
        	android:gravity="center_horizontal"
        	android:layout_height="fill_parent"
        	>
			<LinearLayout
        		android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				>
				<com.markupartist.android.widget.ScrollingTextView
					android:text="@string/firstname"
					android:layout_alignParentTop="true"
					android:layout_width="100dip"
					android:gravity="center_vertical"
					android:layout_height="fill_parent"
					style="@style/brown_textview"
					android:lines="1"
					android:scrollHorizontally="true"
					android:ellipsize="marquee"
					android:marqueeRepeatLimit="marquee_forever"
					/>
				<EditText
					android:id="@+id/firstname"
					android:layout_width="fill_parent"
					android:gravity="center_vertical"
	    			style="@style/login_edittext"
					android:layout_weight="1"
					android:singleLine="true"
	        		android:background="@drawable/edittext_blue"
					android:layout_height="30dip">
				</EditText>
			</LinearLayout>
			<LinearLayout
        		android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				>
				<com.markupartist.android.widget.ScrollingTextView
					android:text="@string/lastname"
					android:layout_alignParentTop="true"
					android:layout_width="100dip"
					android:gravity="center_vertical"
					android:layout_height="fill_parent"
					style="@style/brown_textview"
					android:lines="1"
					android:scrollHorizontally="true"
					android:ellipsize="marquee"
					android:marqueeRepeatLimit="marquee_forever"
					/>
				<EditText
					android:id="@+id/lastname"
					android:layout_width="fill_parent"
					android:gravity="center_vertical"
	    			style="@style/login_edittext"
					android:layout_weight="1"
					android:singleLine="true"
	        		android:background="@drawable/edittext_blue"
					android:layout_height="30dip">
				</EditText>
			</LinearLayout>
			<LinearLayout
        		android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				>
				<com.markupartist.android.widget.ScrollingTextView
					android:text="@string/dob"
					android:layout_alignParentTop="true"
					android:layout_width="100dip"
					android:gravity="center_vertical"
					android:layout_height="fill_parent"
					style="@style/brown_textview"
					android:lines="1"
					android:scrollHorizontally="true"
					android:ellipsize="marquee"
					android:marqueeRepeatLimit="marquee_forever"
					/>
				<EditText
					android:id="@+id/dob"
					android:inputType="date"
					android:layout_width="fill_parent"
					android:gravity="center_vertical"
	    			style="@style/login_edittext"
					android:layout_weight="1"
					android:singleLine="true"
	        		android:background="@drawable/edittext_blue"
					android:layout_height="30dip">
				</EditText>
			</LinearLayout>
			<LinearLayout
        		android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				>
				<com.markupartist.android.widget.ScrollingTextView
					android:text="@string/insee"
					android:layout_alignParentTop="true"
					android:layout_width="100dip"
					android:gravity="center_vertical"
					android:layout_height="fill_parent"
					style="@style/brown_textview"
					android:lines="1"
					android:scrollHorizontally="true"
					android:ellipsize="marquee"
					android:marqueeRepeatLimit="marquee_forever"
					/>
				<EditText
					android:id="@+id/insee"
					android:layout_width="fill_parent"
					android:gravity="center_vertical"
	    			style="@style/login_edittext"
					android:layout_weight="1"
					android:singleLine="true"
	        		android:background="@drawable/edittext_blue"
					android:layout_height="30dip">
				</EditText>
			</LinearLayout>
			<LinearLayout
        		android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				>
				<com.markupartist.android.widget.ScrollingTextView
					android:text="@string/telephone"
					android:layout_alignParentTop="true"
					android:layout_width="100dip"
					android:gravity="center_vertical"
					android:layout_height="fill_parent"
					style="@style/brown_textview"
					android:lines="1"
					android:scrollHorizontally="true"
					android:ellipsize="marquee"
					android:marqueeRepeatLimit="marquee_forever"
					/>
				<EditText
					android:id="@+id/telephone"
					android:inputType="phone"
					android:layout_width="fill_parent"
					android:gravity="center_vertical"
	    			style="@style/login_edittext"
					android:layout_weight="1"
					android:singleLine="true"
	        		android:background="@drawable/edittext_blue"
					android:layout_height="30dip">
				</EditText>
			</LinearLayout>
			<LinearLayout
        		android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				>
				<com.markupartist.android.widget.ScrollingTextView
					android:text="@string/weight"
					android:layout_alignParentTop="true"
					android:layout_width="100dip"
					android:gravity="center_vertical"
					android:layout_height="fill_parent"
					style="@style/brown_textview"
					android:lines="1"
					android:scrollHorizontally="true"
					android:ellipsize="marquee"
					android:marqueeRepeatLimit="marquee_forever"
					/>
				<EditText
					android:id="@+id/weight"
					android:inputType="number|numberDecimal"
					android:layout_width="fill_parent"
					android:gravity="center_vertical"
	    			style="@style/login_edittext"
					android:layout_weight="1"
					android:singleLine="true"
	        		android:background="@drawable/edittext_blue"
					android:layout_height="30dip">
				</EditText>
			</LinearLayout>
			<LinearLayout
        		android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				>
				<com.markupartist.android.widget.ScrollingTextView
					android:text="@string/size"
					android:layout_alignParentTop="true"
					android:layout_width="100dip"
					android:gravity="center_vertical"
					android:layout_height="fill_parent"
					style="@style/brown_textview"
					android:lines="1"
					android:scrollHorizontally="true"
					android:ellipsize="marquee"
					android:marqueeRepeatLimit="marquee_forever"
					/>
				<EditText
					android:id="@+id/size"
					android:inputType="number|numberDecimal"
					android:layout_width="fill_parent"
					android:gravity="center_vertical"
	    			style="@style/login_edittext"
					android:layout_weight="1"
					android:singleLine="true"
	        		android:background="@drawable/edittext_blue"
					android:layout_height="30dip">
				</EditText>
			</LinearLayout>
			<ImageButton
				android:id="@+id/add"
				android:src="@drawable/plus"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:layout_marginTop="2dp"
				android:background="@drawable/imagebutton"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>