<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <com.markupartist.android.widget.ActionBar
        android:id="@+id/actionbar"
        style="@style/ActionBar"
        android:layout_height="wrap_content"/>

    <ScrollView
    	android:layout_width="fill_parent"
    	android:id="@+id/scrollView1"
    	android:layout_height="fill_parent"
    	>
        <LinearLayout
        	android:layout_width="fill_parent"
        	android:id="@+id/linearLayout1"
        	android:orientation="vertical"
        	android:gravity="center_horizontal"
        	android:layout_height="fill_parent">
            <RelativeLayout
            	android:id="@+id/relativeLayout1"
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
            	>
                <TextView
                	android:id="@+id/textView1"
                	android:layout_width="wrap_content"
                	android:layout_alignParentLeft="true"
                	android:layout_height="wrap_content"
                	android:text="@string/working_since"
                	>
                </TextView>
                <TextView
                	android:id="@+id/textView2"
                	android:layout_toRightOf="@+id/textView1"
                	android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
                	android:text="3:45"
                	android:layout_alignTop="@+id/textView1"
                	android:layout_alignBottom="@+id/textView1"
                	>
                </TextView>
                <TextView
                	android:id="@+id/textView3"
                	android:layout_width="wrap_content"
                	android:layout_alignParentRight="true"
                	android:layout_height="wrap_content"
                	android:text="17:28">
                </TextView>
                <TextView
                	android:id="@+id/textView4"
                	android:layout_width="wrap_content"
                	android:layout_toLeftOf="@+id/textView3"
                	android:layout_height="wrap_content"
                	android:layout_alignTop="@+id/textView3"
                	android:layout_alignBottom="@+id/textView3"
                	android:text="@string/time"
                	>
                </TextView>
            </RelativeLayout>
        	<ExpandableListView
        		android:id="@+id/expandableListView1"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content">
        	</ExpandableListView>
        	<TextView
        		android:layout_width="wrap_content"
        		android:id="@+id/textView5"
        		android:text="@string/patients_title"
        		android:layout_height="wrap_content">
        	</TextView>
        	<GridView
        		android:id="@+id/gridView1"
        		android:layout_width="fill_parent"
			    android:numColumns="4"
			    android:verticalSpacing="10dip"
			    android:horizontalSpacing="10dip"
			    android:gravity="center"
			    android:smoothScrollbar="true"
        		android:layout_height="wrap_content">
       		</GridView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>